Responsive design update. Overflow corrected

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     color: #0e2149;
     background-color: white;
     font-size: 22px;
-    text-align: center;
+    text-align: center; 
 }
 
 /* Adjust Flex Containers Here */
@@ -61,7 +61,13 @@ a:link {
 
 /* Main Section */
 
-#main {
+#control {
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+}
+
+.main {
     display: block;
     justify-content: center;
     
@@ -70,6 +76,7 @@ a:link {
 .logo {
     height: 700px;
     width: 100%;
+    padding-top: 60px;
     background: url("../Images/Main\ Image.png") center no-repeat;
     background-size: 100%;
 }
@@ -86,19 +93,40 @@ b {
 
 /* Main Services Section */
 
-#services {
-    background-color: #0e2149
+.services {
+    display: flex;
+    background-color: #0e2149;
+    width:100%;
 }
 
 .service {
-    padding: 4%;
+    padding: 20px;
+    width: 100%;
+    min-width: 20%;
     color: white;
     border: 2px solid white;
+    text-align: c
 }
 
 @media only screen and (max-width: 768px) {
-  # logo {
+    
+    .services{
+        display: block;
+    }
 
-  }
+    .service {
+        margin: 0;
+        padding: 20px 0px 20px 0px;
+        font-size: 80%;
+    }
 
+    h2 {
+        margin: 0;
+    }
+
+@media only screen and (max-width: 250px) {
+
+    #control {
+        display: block
+    }
 }
